test-data/error/both-j-d.hltas
version 1
frames
----jd----|------|------|0.001|-|-|1
